# small_gpt

./: README.md  pyproject.toml
nano_gpt/: gpt2.py  gpt2_2.py  utils.py
nano_gpt_ak/: bench.py  model.py
