[tool.poetry]
name = "small-gpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
numpy = "1.24.1"
regex = "2017.4.5"
requests = "2.27.1"
tqdm = "4.64.0"
fire = "0.5.0"
tensorflow = "2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
